--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>conqueror-blacklist</title>
-
+    <link href="/favicon.png" rel="shortcut icon">
     <!-- Bootstrap -->
     <link href="./src/assets/css/bootstrap.min.css" rel="stylesheet">
 
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="./src/assets/js/bootstrap.min.js"></script>
+    <script src="/dist/build.js"></script>
   </body>
 </html>
