--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>conqueror-blacklist</title>
     <link href="/favicon.png" rel="shortcut icon">
     <!-- Bootstrap -->
-    <link href="./src/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
   </head>
   <body>
@@ -15,7 +15,8 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="./src/assets/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootbox.js/4.4.0/bootbox.min.js"></script>
     <script src="/dist/build.js"></script>
   </body>
 </html>
